--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -787,3 +787,28 @@ a {
   align-items: center;
   margin-top: 16px;
 }
+
+.carousel-dots {
+  position: absolute;
+  right: 0;
+  bottom: 10px;
+  left: 0;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+  margin-right: 15%;
+  margin-left: 15%;
+  list-style-type: none;
+}
+
+.dot {
+  box-sizing: border-box;
+  flex: 0 1 auto;
+  width: 32px;
+  height: 8px;
+  cursor: pointer;
+  background: #fff;
+  opacity: 0.5;
+  transition: opacity 0.6s ease;
+}
